--- a/src/account/templates/account/users/list.html
+++ b/src/account/templates/account/users/list.html
@@ -10,6 +10,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
+                        <th>Participant</th>
                         <th>Email</th>
                         <th>Role</th>
                         <th>Active</th>
@@ -20,11 +21,12 @@
                     {% for u in users %}
                         <tr>
                             <td>{{ u.first_name }} {{ u.last_name }}</td>
+                            <td>{{ u.participant }}</td>
                             <td>{{ u.email }}</td>
                             <td>Role</td>
                             <td>{{ u.is_active }}</td>
                             <td>
-                                <a href="#" class="btn btn-sm btn-primary">Assign Role</a>
+                                <a href="#" class="btn btn-sm btn-info">Assign Role</a>
                                 {% if u.is_active %}
                                     <a href="#" class="btn btn-sm btn-warning">Deactivate</a>
                                 {% else %}
