--- a/src/account/templates/account/users/list.html
+++ b/src/account/templates/account/users/list.html
@@ -3,40 +3,53 @@
 {% block title %}Users{% endblock %}
 
 {% block content %}
-    <div class="card shadow">
-        <div class="card-header bg-dark-custom">Users</div>
-        <div class="card-body">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Participant</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                        <th>Active</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for u in users %}
-                        <tr>
-                            <td>{{ u.first_name }} {{ u.last_name }}</td>
-                            <td>{{ u.participant }}</td>
-                            <td>{{ u.email }}</td>
-                            <td>Role</td>
-                            <td>{{ u.is_active }}</td>
-                            <td>
-                                <a href="#" class="btn btn-sm btn-info">Assign Role</a>
-                                {% if u.is_active %}
-                                    <a href="#" class="btn btn-sm btn-warning">Deactivate</a>
-                                {% else %}
-                                    <a href="#" class="btn btn-sm btn-success">Activate</a>
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+<div class="row justify-content-center">
+    <div class="col">
+        <div class="card shadow">
+            <div class="card-header bg-dark-custom">Users</div>
+            User: {{ request.user }}
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Participant</th>
+                                <th>Email</th>
+                                <th>Roles</th>
+                                <th>Active</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for u in users %}
+                                <tr>
+                                    <td>{{ u.first_name }} {{ u.last_name }}</td>
+                                    <td>{{ u.participant }}</td>
+                                    <td>{{ u.email }}</td>
+                                    <td>{{ u.get_group_names }}</td>
+                                    <td>
+                                        {% if u.is_active %} 
+                                            <span class="badge badge-pill badge-success">Active</span> 
+                                        {% else %} 
+                                            <span class="badge badge-pill badge-secondary">Passive</span>  
+                                        {% endif %}</td>
+                                    <td>
+                                        <a href="#" class="btn btn-sm btn-info">Assign Role</a>
+                                        {% if u.is_active %}
+                                            <a href="{% url 'account:deactivate_user' u.id %}" class="btn btn-sm btn-warning">Deactivate</a>
+                                        {% else %}
+                                            <a href="{% url 'account:activate_user' u.id %}" class="btn btn-sm btn-success">Activate</a>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
+</div>
+
 {% endblock %}
