--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -23,7 +23,15 @@
 
             <div id="layoutSidenav_content">
                 <main>
-                    <div class="container mt-4">
+                    <div class="container-fluid mt-4">
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-dismissible alert-{{message.tags}}">
+                                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                    {{message}}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                         {% block content %} {% endblock %}
                     </div>
                 </main>
