--- a/src/core/templates/core/topnav.html
+++ b/src/core/templates/core/topnav.html
@@ -13,12 +13,22 @@
     <!-- Navbar-->
     <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i>
+                {% if user.is_authenticated %}
+                [{{user.first_name}}]Logged in 
+                {% endif %}
+            </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">Profile</a>
-                <a class="dropdown-item" href="#">Settings</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">Logout</a>
+                {% if user.is_authenticated %}
+                    <a class="dropdown-item" href="#">Profile</a>
+                    <a class="dropdown-item" href="#">Settings</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
+                {% else %}
+                    <a class="dropdown-item" href="{% url 'account:register' %}">Register</a>
+                    <a class="dropdown-item" href="{% url 'account:login' %}">Login</a>
+                {% endif %}
+
             </div>
         </li>
     </ul>
