--- a/src/account/templates/account/users/list.html
+++ b/src/account/templates/account/users/list.html
@@ -4,12 +4,12 @@
 
 {% block content %}
 <div class="row justify-content-center">
-    <div class="col">
+    <div class="col-md-12">
         <div class="card shadow">
             <div class="card-header bg-dark-custom">Users</div>
             <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-hover">
+                <div class="table table-responsive">
+                    <table class="table table-hover table-responsive">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -35,13 +35,33 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <a href="#" 
-                                        class="btn btn-sm btn-outline-info ">Assign Role</a>
+                                        <form action="{% url 'account:role_assing' u.id %}" method="POST">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <select 
+                                                    class="form-control btn btn-sm border" 
+                                                    onchange="this.form.submit()"
+                                                    name="chosen_role">
+                                                  <option value="" hidden> Roles</option>
+                                                  {% for role in roles %}
+                                                    <option value="{{ role }}">{{ role }}</option>
+                                                  {% endfor %}
+                                                </select>
+                                            </div>
+                                        </form>
                                         {% if u.is_active %}
                                             <a href="{% url 'account:deactivate_user' u.id %}" 
-                                                class="btn btn-sm btn-warning ">Deactivate</a>
+                                                class="btn btn-sm btn-warning"
+                                                type="button" data-toggle="tooltip" 
+                                                data-placement="left" title="Deactivate">
+                                                <i class="fab fa-creative-commons-zero"></i>
+                                            </a>
                                         {% else %}
-                                            <a href="{% url 'account:activate_user' u.id %}" class="btn btn-sm btn-success">Activate</a>
+                                            <a href="{% url 'account:activate_user' u.id %}" class="btn btn-sm btn-success"
+                                                type="button" data-toggle="tooltip" 
+                                                data-placement="top" title="Activate">
+                                                <i class="fab fa-creative-commons-sampling"></i>
+                                            </a>
                                         {% endif %}
                                     </td>
                                 </tr>
