--- a/src/core/templates/core/sidenav.html
+++ b/src/core/templates/core/sidenav.html
@@ -22,8 +22,8 @@
                 </a>
                 <div class="collapse" id="broadcast-menu" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="#">New</a>
-                        <a href="#" class="nav-link">Broadcast List</a>
+                        <a class="nav-link" href="{% url 'communication:new_broadcast' %}">New</a>
+                        <a href="{% url 'communication:broadcast_list' %}" class="nav-link">Broadcasts published</a>
                     </nav>
                 </div>
             </div>
