--- a/src/communication/templates/communication/broadcast/unpublished.html
+++ b/src/communication/templates/communication/broadcast/unpublished.html
@@ -8,10 +8,8 @@
         <div class="card border-light shadow mb-4">
             <div class="card-header">
                 <strong>{{ broadcast.title }}</strong>
-                {% if perms.communication.change_broadcast %} 
-                <a href="{% url 'communication:unpublish' broadcast.id %}" class="btn btn-sm btn-warning ml-2">Unpublish</a>
-                <a href="#" class="btn btn-sm btn-info">Edit</a>
-                <a href="#" class="btn btn-sm btn-danger">Delete</a>
+                {% if perms.communication.change_broadcast %}
+                <a href="{% url 'communication:publish' broadcast.id %}" class="btn btn-success btn-sm ml-2">Publish</a>
                 {% endif %}
             </div>
             <div class="card-body">
@@ -19,11 +17,10 @@
                     {{ broadcast.body }}
                 </div>
             </div>
-            <div class="card-footer">
-                <small class="text-muted">
-                    Published at {{ broadcast.published }}
-                </small>
-            </div>
+        </div>
+    {% empty %}
+        <div>
+            <p>No broadcasts!</p>
         </div>
     {% endfor %}
 </div>
