--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -14,6 +14,8 @@
         <link href="{% static 'core/css/bootstrap-comorg.min.css'%}" rel="stylesheet" >
         <link href="{% static 'core/css/custom.css' %}" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
     </head>
     <body>
         {% include 'core/topnav.html' %}
