--- a/src/core/templates/core/sidenav.html
+++ b/src/core/templates/core/sidenav.html
@@ -23,7 +23,20 @@
                 <div class="collapse" id="broadcast-menu" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
                         <a class="nav-link" href="{% url 'communication:new_broadcast' %}">New</a>
-                        <a href="{% url 'communication:broadcast_list' %}" class="nav-link">Broadcasts published</a>
+                        <a href="{% url 'communication:broadcast_list' %}" class="nav-link">Published</a>
+                        <a href="{% url 'communication:list_unpublished' %}" class="nav-link">Unpublished</a>
+                    </nav>
+                </div>
+
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#documentation" aria-expanded="false" aria-controls="collapseLayouts">
+                    <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                    Documentation
+                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                </a>
+                <div class="collapse" id="documentation" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
+                    <nav class="sb-sidenav-menu-nested nav">
+                        <a class="nav-link" href="#">Topic A</a>
+                        <a href="#" class="nav-link">Topic B</a>
                     </nav>
                 </div>
             </div>
