--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -39,6 +39,8 @@
                 </main>
             </div>
         </div>
+        
+        <!-- Bootstrap Javascripts -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="{% static 'core/js/scripts.js' %}"></script>
