--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -34,6 +34,32 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
+
+                        <!-- spinner -->
+                        <!-- Modal -->
+                        <div class="modal py-5" id="spinner-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <div class="row justify-content-center">
+                                        <p>Please Wait ...</p>
+                                    </div>
+                                    <div class="row justify-content-center">
+                                        <div class="spinner-grow text-danger mr-2" role="status">
+                                            <span class="sr-only">Loading...</span>
+                                          </div>
+                                          <div class="spinner-grow text-warning mr-2" role="status">
+                                            <span class="sr-only">Loading...</span>
+                                          </div>
+                                          <div class="spinner-grow text-info mr-2" role="status">
+                                            <span class="sr-only">Loading...</span>
+                                          </div>          
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+
                         {% block content %} {% endblock %}
                     </div>
                 </main>
@@ -44,5 +70,6 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="{% static 'core/js/scripts.js' %}"></script>
+        <script src="{% static 'core/js/custom.js' %}"></script>
     </body>
 </html>
