--- a/src/communication/templates/communication/broadcast/unpublished.html
+++ b/src/communication/templates/communication/broadcast/unpublished.html
@@ -6,11 +6,15 @@
 <div class="container-fluid">
     {% for broadcast in broadcasts %}
         <div class="card border-light shadow mb-4">
-            <div class="card-header">
-                <strong>{{ broadcast.title }}</strong>
-                {% if perms.communication.change_broadcast %}
-                <a href="{% url 'communication:publish' broadcast.id %}" class="btn btn-success btn-sm ml-2">Publish</a>
-                {% endif %}
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <div>
+                    <strong>{{ broadcast.title }}</strong>
+                </div>
+                <div>
+                    {% if perms.communication.change_broadcast %}
+                        <a href="{% url 'communication:publish' broadcast.id %}" class="btn btn-success btn-sm ml-2">Publish</a>
+                    {% endif %}
+                </div>
             </div>
             <div class="card-body">
                 <div class="card-text">
