SubFolder structures created

--- a/src/core/templates/core/sidenav.html
+++ b/src/core/templates/core/sidenav.html
@@ -33,7 +33,7 @@
                 </a>
                 <div class="collapse" id="documentation" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="{% url 'document:index' %}">Documents</a>
+                        <a class="nav-link" href="{% url 'document:index' %}">Categories</a>
                     </nav>
                 </div>
             </div>
