Document app entirely changed

--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -37,7 +37,7 @@
 
                         <!-- spinner -->
                         <!-- Modal -->
-                        <div class="modal py-5" id="spinner-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <!-- <div class="modal py-5" id="spinner-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-body">
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         {% block content %} {% endblock %}
                     </div>
