--- a/src/document/templates/document/file/upload.html
+++ b/src/document/templates/document/file/upload.html
@@ -1,23 +1,23 @@
 {% extends 'core/base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Category{% endblock %}
+{% block title %}Upload File{% endblock %}
 
 {% block content %}
 
     <div class="container">
         <div class="card border-light shadow">
             <div class="card-header bg-dark-custom">
-                Create a new category
+                Upload a file
             </div>
             <div class="card-body">
-                <form method="POST">
+                <form method="POST" enctype="multipart/form-data">
                     <div class="fieldset">
                         {% csrf_token %}
                         {{ form|crispy }}
                     </div>
-                    <a class="btn btn-outline-info" href="{% url 'document:index' %}"><i class="fas fa-arrow-left"></i></a>
-                    <input type="submit" class="btn btn-primary" value="Save">
+                    <a class="btn btn-outline-info" href="javascript:history.go(-1)"><i class="fas fa-arrow-left"></i></a>
+                    <input type="submit" class="btn btn-primary" value="Upload">
                 </form>
             </div>
         </div>
