--- a/src/document/templates/document/folder/create.html
+++ b/src/document/templates/document/folder/create.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Category{% endblock %}
+{% block title %}Create Folder{% endblock %}
 
 {% block content %}
 
