--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -11,7 +11,8 @@
             {% block title %} {% endblock %}
         </title>
         <link href="{% static 'core/css/styles.css' %}" rel="stylesheet" />
-        <link href="{% static 'core/css/bootstrap-comorg.min.css'%}" rel="stylesheet" >
+        <link rel="stylesheet" href="{% static 'core/css/bootstrap-custom-flatly.min.css' %}">
+        <!-- <link href="{% static 'core/css/bootstrap-comorg.min.css'%}" rel="stylesheet" > -->
         <link href="{% static 'core/css/custom.css' %}" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
