--- a/src/document/templates/document/document_list.html
+++ b/src/document/templates/document/document_list.html
@@ -42,8 +42,29 @@
                     <td>{{ folder.created }}</td>
                     <td> </td>
                     <td>
-                        <a href="#" class="btn btn-sm btn-warning"><i class="fas fa-edit"></i></a>
-                        <a href="{% url 'document:folder_delete' folder_id=folder.id %}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+                        <a href="{% url 'document:folder_edit' folder_id=folder.id %}" class="btn btn-sm btn-warning"><i class="fas fa-edit"></i></a>
+                        <button data-toggle="modal" data-target="#sureToDeleteModel-{{folder.id}}"
+                            class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <!-- Modal opens when try to delete folder -->
+                        <div class="modal fade" id="sureToDeleteModel-{{folder.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Delete?</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete the folder "{{ folder.name }}"
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No, go back</button>
+                                    <a href="{% url 'document:folder_delete' folder_id=folder.id %}" class="btn btn-danger">Yes, I am sure</a>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 {% endfor %}
@@ -61,7 +82,27 @@
                     <td>{{ file.description }}</td>
                     <td>
                         <a href="{% url 'document:file_download' file_id=file.id %}" class="btn btn-sm btn-secondary"><i class="fas fa-file-download"></i></a>
-                        <a href="{% url 'document:file_delete' file_id=file.id %}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+                        <button data-toggle="modal" data-target="#sureToDeleteFileModal-{{file.id}}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <!-- Modal opens when try to delete file -->
+                        <div class="modal fade" id="sureToDeleteFileModal-{{file.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Delete?</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to delete this file "{{ file.name }}"
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, go back</button>
+                                        <a href="{% url 'document:file_delete' file_id=file.id %}" class="btn btn-danger">Yes, I am sure</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 {% endfor %}
